--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
         "cors": "^2.8.2",
         "debug": "^2.2.0",
         "express": "^4.14.0",
+        "firebase": "^5.9.0",
         "firebase-admin": "^5.12.1",
         "i18n": "^0.8.3",
         "imap": "^0.8.19",
@@ -33,6 +34,7 @@
         "moment": "^2.15.1",
         "moment-timezone": "^0.5.13",
         "morgan": "^1.7.0",
+        "mysql": "^2.16.0",
         "node-twitter-api": "^1.8.0",
         "node-xlsx": "^0.11.2",
         "nodejs-aes256": "^1.0.1",
@@ -42,7 +44,7 @@
         "nodemon": "^1.18.4",
         "numeral": "^2.0.6",
         "request": "^2.87.0",
-        "sequelize": "^3.24.3",
+        "sequelize": "^3.34.0",
         "sequelize-cli": "^4.1.1",
         "socket.io": "^2.1.1",
         "speakeasy": "^2.0.0",
