--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
     "angular2-uuid": "^1.1.1",
     "angularfire2": "^5.0.0-rc.10",
     "bootstrap": "^4.1.1",
+    "buffer": "^5.2.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "current-device": "^0.7.8",
