--- a/web/package.json
+++ b/web/package.json
@@ -42,6 +42,7 @@
     "ng-recaptcha": "^3.0.5",
     "ng2-trim-directive": "^2.1.0",
     "ngx-file-drop": "^5.0.0",
+    "ngx-toastr": "^10.0.2",
     "node-sass": "^4.9.0",
     "popper.js": "^1.14.3",
     "rxjs": "^6.2.1",
