--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,10 +15,12 @@
     "react-native": "0.58.6",
     "react-native-elements": "^1.1.0",
     "react-native-flexi-radio-button": "^0.2.2",
+    "react-native-gesture-handler": "^1.1.0",
     "react-native-modal": "^9.0.0",
+    "react-native-reanimated": "^1.0.0",
     "react-native-router-flux": "4.0.0-beta.31",
     "react-native-swiper": "^1.5.14",
-    "react-native-tab-view": "^2.0.1",
+    "react-native-tab-view": "^2.0.3",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
