--- a/web/package.json
+++ b/web/package.json
@@ -25,14 +25,14 @@
     "@ngx-translate/http-loader": "1.0.1",
     "angular2-qrcode": "^2.0.1",
     "angular2-uuid": "^1.1.1",
-    "angularfire2": "^5.0.0-rc.10",
+    "angularfire2": "5.0.0-rc.6",
     "base-64": "^0.1.0",
     "bootstrap": "^4.1.1",
     "buffer": "^5.2.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "current-device": "^0.7.8",
-    "firebase": "^5.0.4",
+    "firebase": "4.10.1",
     "jquery": "^3.3.1",
     "js-md5": "^0.7.3",
     "json2csv": "^3.7.3",
@@ -45,8 +45,8 @@
     "ngx-toastr": "^10.0.2",
     "node-sass": "^4.9.0",
     "popper.js": "^1.14.3",
-    "rxjs": "^6.2.1",
-    "rxjs-compat": "^6.1.0",
+    "rxjs": "6.0.0",
+    "rxjs-compat": "6.1.0",
     "zone.js": "^0.8.24"
   },
   "devDependencies": {
