--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "base-64": "^0.1.0",
+    "firebase": "^5.11.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "native-base": "^2.12.0",
