--- a/mobile/package.json
+++ b/mobile/package.json
@@ -25,11 +25,13 @@
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
-    "redux-saga": "^1.0.2"
+    "redux-saga": "^1.0.2",
+    "uglify-es": "^3.2.2"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "24.1.0",
+    "babel-polyfill": "^6.26.0",
     "jest": "24.1.0",
     "metro-react-native-babel-preset": "0.53.0",
     "react-test-renderer": "16.6.3"
